--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,15 @@
     "http://*/*"
   ],
 
+  "background": {
+    "scripts":    [
+      "lib/jquery-2.1.3.min.js",
+      "lib/lodash-2.4.1.min.js",
+      "src/background-geturl.js"
+    ],
+    "persistent": false
+  },
+
   "content_scripts": [
     {
       "matches": ["http://*/*","https://*/*"],
@@ -50,5 +59,9 @@
     "*",
     "dist/*",
     "src/*"
+  ],
+  "permissions": [
+    "tabs",
+    "*://*/*"
   ]
 }
